--- a/login.html
+++ b/login.html
@@ -65,12 +65,19 @@
             transform: translateY(-2px);
             box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
+        .login-header img {
+            height: 80px;
+            background-color: #1e3a8a;
+            border-radius: 50px;
+            padding: 8px;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="login-box">
         <div class="login-header">
-            <i class="fas fa-sign-in-alt fa-2x mb-2 text-primary"></i>
+            <img src="./logofavwhite.png" alt="MAJU Logo" class="me-2" >
             <h3>Login to MAJU Career</h3>
             <p class="text-muted">Choose your preferred login method</p>
         </div>
