--- a/login.html
+++ b/login.html
@@ -1,113 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAJU Career Portal - Login</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            background: linear-gradient(135deg, #2c5aa0, #1e3a8a);
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .login-box {
-            background: white;
-            padding: 2rem;
-            border-radius: 15px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.15);
-            width: 100%;
-            max-width: 420px;
-        }
-
-        .login-header {
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-
-        .login-header h3 {
-            font-weight: bold;
-            color: #1f2937;
-        }
-
-        .btn-social {
-            padding: 0.75rem 1rem;
-            border-radius: 10px;
-            font-weight: 600;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.75rem;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            margin-bottom: 1rem;
-        }
-
-        .btn-google {
-            background: #db4437;
-            color: white;
-        }
-        .btn-microsoft {
-            background: #00a1f1;
-            color: white;
-        }
-        .btn-email {
-            background: #6b7280;
-            color: white;
-        }
-        .btn-social:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-        }
-        .login-header img {
-            height: 80px;
-            background-color: #1e3a8a;
-            border-radius: 50px;
-            padding: 8px;
-            margin-bottom: 10px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login</title>
+ <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="auth_style.css">
 </head>
-<body>
-    <div class="login-box">
-        <div class="login-header">
-            <img src="./logofavwhite.png" alt="MAJU Logo" class="me-2" >
-            <h3>Login to MAJU Career</h3>
-            <p class="text-muted">Choose your preferred login method</p>
-        </div>
+<body class="bg-light">
 
-        <div class="social-login">
-            <a href="#" class="btn btn-google btn-social">
-                <i class="fab fa-google"></i>
-                Continue with Google
-            </a>
-            <a href="#" class="btn btn-microsoft btn-social">
-                <i class="fab fa-microsoft"></i>
-                Continue with Microsoft
-            </a>
-        </div>
-
-        <hr class="my-3">
-
-        <form action="#" method="POST">
-            <div class="mb-3">
-                <label for="email" class="form-label">Email Address</label>
-                <input type="email" class="form-control" name="email" required>
+<div class="container py-5 login-container">
+  <div class="row justify-content-center">
+    <div class="col-lg-10 col-xl-8">
+      <div class="card shadow-lg border-0 rounded-4 overflow-hidden">
+        <div class="row g-0">
+          
+          <!-- Left Panel -->
+          <div class="col-md-5 gradient-left d-flex flex-column text-white p-4">
+            <div class="flex-grow-1 d-flex flex-column justify-content-center text-center">
+              <img src="./logofavwhite.png" alt="Career illustration" class="img-fluid mb-4">
+              <h5 class="fw-bold">Unlock Your Career</h5>
+              <p class="small">
+                Explore opportunities from across the globe to grow, showcase skills,
+                gain CV points & get hired by your dream company.
+              </p>
+              <span class="fw-semibold"> hiring opportunities</span>
             </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" name="password" required>
+          </div>
+
+          <!-- Right Panel -->
+          <div class="col-md-7 p-5 bg-white">
+            <h3 class="fw-bold mb-4 text-center">WELCOME BACK!</h3>
+            <p class="text-center text-muted mb-4">Better jobs are waiting. Sign in and find your next move.</p>
+
+            <!-- OAuth buttons -->
+            <div class="d-grid gap-3 mb-4">
+              <a href="/auth/google" class="btn btn-outline-secondary d-flex align-items-center justify-content-center gap-2">
+                <i class="fab fa-google"></i> Sign in with Google
+              </a>
+              <a href="/auth/microsoft" class="btn btn-outline-secondary d-flex align-items-center justify-content-center gap-2">
+                <i class="fab fa-microsoft"></i> Sign in with Microsoft
+              </a>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Login</button>
-        </form>
+
+            <div class="position-relative text-center mb-4">
+              <span class="divider">or</span>
+            </div>
+
+            <!-- Email/Password -->
+            <form>
+              <div class="mb-3">
+                <input type="email" class="form-control rounded-pill" placeholder="Enter Email Address" required>
+              </div>
+              <div class="mb-3 position-relative">
+                <input type="password" class="form-control rounded-pill" placeholder="Enter Password" required>
+              </div>
+              <button class="btn btn-primary w-100 rounded-pill py-2">Login</button>
+            </form>
+
+            <div class="d-flex justify-content-between mt-3 small">
+              <a href="#" class="text-decoration-none">Forgot Password?</a>
+              <a href="signup.html" class="text-decoration-none">Sign up</a>
+            </div>
+
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+</div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
